--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -1,10 +1,8 @@
 name: Java Code Quality Check (PMD)
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  push: {}
+  pull_request: {}
 
 jobs:
   pmd:
